--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,6 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
+    - name: zip scripts
+      uses: nguyenquyhy/zip-release@v0.3.0
+      with:
+        filename: scripts.zip
+        path: scripts
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -21,3 +26,6 @@ jobs:
         release_name: ${{ github.ref }}
         draft: false
         prerelease: false
+        asset_path: scripts.zip
+        asset_name: scripts.zip
+#         asset_content_type: application/zip
