--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,8 +24,9 @@ jobs:
       with:
         tag_name: ${{ github.ref }}
         release_name: ${{ github.ref }}
-        draft: false
+        draft: true
         prerelease: false
         asset_path: scripts.zip
         asset_name: scripts.zip
+        body_path: scripts.zip
 #         asset_content_type: application/zip
